Fixes <pre> overflow

--- a/src/oseille/3-elements/base/_code.scss
+++ b/src/oseille/3-elements/base/_code.scss
@@ -32,6 +32,7 @@
     line-height: 0; // Prevent element from affecting the line height in all browsers.
 
     -webkit-user-select: all;
+    -moz-user-select: all;
     -ms-user-select: all;
     user-select: all;
 }
@@ -51,11 +52,14 @@
     text-align: left;
     text-shadow: none;
 
-    vertical-align: baseline; // Only applies to inline, inline-block and table-cell elements
-    white-space: pre-wrap;
     word-spacing: normal;
     word-break: normal;
     word-wrap: normal;
+}
+
+@mixin normalize-inline {
+    vertical-align: baseline;
+    white-space: pre-wrap;
 }
 
 /* Inline code semantic styling */
@@ -75,8 +79,8 @@ code {
 
     margin: 0;
 
-    //@include normalize-code;
     @include normalize-text;
+    @include normalize-inline;
 
     a:any-link {
         color: var(--code-link-color, #{colors.get('code-fore')});
@@ -88,6 +92,7 @@ output {
     font-style: inherit;
 
     @include normalize-text;
+    @include normalize-inline;
 
     border: 0;
     margin: 0;
@@ -109,14 +114,19 @@ pre {
 
     margin: boxmodel.get('margin');
     overflow: auto; // Responsiveness
-    overflow-wrap: break-word;
     padding: calc(#{fonts.get-line-spacing('small')} * #{boxmodel.get('padding')});
 
     @include normalize-text;
+    white-space: pre;
 
     code {
         background-color: transparent;
         font-size: 1em;
+    }
+
+    &.scrollable {
+        max-height: 20rem;
+        overflow-y: scroll;
     }
 
     &.line-numbers {
@@ -133,7 +143,7 @@ pre {
         }
     }
 
-    &.contains-code {
+    &[data-lang] {
         position: relative;
         &::before {
             content: attr(data-lang);
@@ -159,6 +169,7 @@ kbd {
     font-style: normal;
 
     @include normalize-text;
+    @include normalize-inline;
 
     margin: 0;
     padding: calc(#{boxmodel.get('padding')} / 4) calc(#{boxmodel.get('padding')} / 2);
@@ -169,6 +180,7 @@ samp {
     font-style: inherit;
 
     @include normalize-text;
+    @include normalize-inline;
 
     border: 0;
     margin: 0;
@@ -180,6 +192,7 @@ var {
     font-style: italic;
 
     @include normalize-text;
+    @include normalize-inline;
 
     border: 0;
     margin: 0;
